@@ -21,6 +21,9 @@ systemd (208-7) UNRELEASED; urgency=medium
     Drop "isolation-machine" requirement.
   * Use glibc's xattr support instead of requiring libattr. Fixes FTBFS with
     latest glibc and libattr. Cherrypicked from trunk. (Closes: #756097)
+  * Build python3-systemd for Python 3 bindings. Drop python-systemd; it does
+    not have any reverse dependencies, and we want to encourage moving to
+    Python 3. (LP: #1258089)
 
  -- Michael Biebl <biebl@debian.org>  Thu, 17 Jul 2014 00:48:14 +0200
 
